# RYSCrius

RYSCrius/: .gitignore  settings.gradle
RYSCrius/app/: build.gradle
RYSCrius/app/src/androidTest/java/com/renyushuang/ryscrius/: ExampleInstrumentedTest.java
RYSCrius/app/src/main/: AndroidManifest.xml
RYSCrius/app/src/main/java/com/renyushuang/ryscrius/: CallJavaMethodFromNativeCode.java  GetJavaPropertyFromNativeC.java  JniHelloWord.java  MainActivity.java
RYSCrius/app/src/main/java/crius/jni/: CallJavaMethodFromNativeCode.java  GetJavaPropertyFromNativeC.java  JniHelloWord.java
RYSCrius/app/src/main/jni/: CMakeLists.txt  com_renyushuang_ryscrius_CallJavaMethodFromNativeCode.c  com_renyushuang_ryscrius_GetJavaPropertyFromNativeC.c  com_renyushuang_ryscrius_JniHelloWord.c  com_renyushuang_ryscrius_JniHelloWord.h
RYSCrius/app/src/main/jni/jniexample/: crius_jni_CallJavaMethodFromNativeCode.c  crius_jni_GetJavaPropertyFromNativeC.c  crius_jni_JniHelloWord.c
RYSCrius/app/src/main/res/layout/: activity_main.xml
RYSCrius/app/src/main/res/values/: strings.xml
RYSCrius/app/src/test/java/com/renyushuang/ryscrius/: ExampleUnitTest.java
RYSCrius/gradle/wrapper/: gradle-wrapper.properties
RYSCruise/: .gitignore  settings.gradle
RYSCruise/app/: build.gradle
RYSCruise/app/src/androidTest/java/com/renyushuang/ryscruise/: ExampleInstrumentedTest.kt
RYSCruise/app/src/main/: AndroidManifest.xml
RYSCruise/app/src/main/java/com/renyushuang/ryscruise/: MainActivity.kt
RYSCruise/app/src/main/res/values/: strings.xml
RYSCruise/app/src/test/java/com/renyushuang/ryscruise/: ExampleUnitTest.kt
RYSCruise/gradle/wrapper/: gradle-wrapper.properties
